Alterazione del commento, aggiunto comandi git

--- a/index.html
+++ b/index.html
@@ -31,3 +31,7 @@
 </html>
 <!-- Push mi serve per mandare i commit su github, 
  mentre i pull mi serve per prendere le modifiche fatte su github-->
+ <!-- Posso usare il terminale per fare tutto, prima faccio le modifiche ai documenti, 
+  poi apro il terminale e scrivo git status, mi fa vedere gli elementi modificati
+  poi scrivo git add e il nome dell'archivio, se ne ho ppiù di uno scrivo
+  git add . , poi scrivo git commit -m "messaggio", poi scrivo git push -->
